<resources>
    <string name="app_name">NPuzzel</string>

    <string name="username">Username</string>
    <string name="action_settings">Settings</string>

    <string name="reset_puzzle">Reset puzzle</string>
    <string name="new_puzzle">New puzzle</string>
    <string name="change_difficulty">Change difficulty</string>
    <string name="show_solution">Show solution</string>
    <string name="solution">Solution</string>
    <string name="got_it">Got it!</string>

    <string name="difficulty_very_easy" translatable="false">Very easy</string>
    <string name="difficulty_easy" translatable="false">Easy</string>
    <string name="difficulty_medium" translatable="false">Medium</string>
    <string name="difficulty_hard">Hard</string>

    <string name="title_activity_detail">Play</string>
    <string name="title_activity_you_win">Congratulations!</string>
    <string name="congratsulation">Congratulations, puzzle solved!</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <string name="save_settings">Save</string>
    <string name="searching_for_opponent">Please wait, we are searching for an opponent</string>
    <string name="found_opponent"> An opponent has been found</string>
    <string name="please_wait">Please wait while the opponennt is choosing a picture</string>
    <string name="select_picture"> Please select a picture to play with</string>

    <string name="title_activity_game_start" translatable="false">GameStartActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="start_screen">Enter your username</string>
    <string name="start_screen_save">Save</string>

    <string name="find_opponent">Find opponent</string>
    <string name="opponent_still_playing">Please wait until your opponent is done</string>
    <string name="you_won">You won this match</string>
    <string name="you_lost">You lost this match</string>
    <string name="fragment_won">Won</string>
    <string name="fragment_lost">Lost</string>
    <string name="your_points">Your points:</string>
    <string name="enemy_points">Your opponent points:</string>

    <string name="title_activity_select_difficulty" translatable="false">SelectDifficultyActivity</string>
    <string name="no_active_location_providers">You have no location providers active, please turn on GPS or Network-based location detection</string>
    <string name="location_settings">Go to location settings</string>
    <string name="wait_for_location">Your location is not yet available. Please wait a moment until your location has been found</string>
    <string name="no_location_available">No location available yet</string>
    <string name="searching_opponent">Searching opponent</string>
    <string name="locating_opponent">Please wait while an opponent is being located</string>
    <string name="CountDownTimer">Game starts in</string>
    <string name="input_radius_for_opponent">Please input the radius in which you want to seek an opponent</string>
    <string name="standard_radius">500</string>
    <string name="meters">meters</string>
    <string name="your_score">Your Score:</string>
    <string name="enemy_score">Enemy Score:</string>
    <string name="result">Result:</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="username_already_exists_title">Username already exists!</string>
    <string name="username_already_exists_message">This username already exists, please pick another one!</string>
</resources>
